# Shadowcheck

./: .env.example  .gitignore  README.md  ShadowCheck.ipynb  pyproject.toml
src/shadowcheck/: __init__.py  agent_runtime.py  cli.py  config.py  deps.py  intel.py  logic.py  models.py  recon.py  service.py  ui.py
tests/: test_logic.py
